--- a/Wordsquash/app/views/posts/_form.html.erb
+++ b/Wordsquash/app/views/posts/_form.html.erb
@@ -20,8 +20,7 @@
     <%= f.text_area :body %>
   </div>
     <div class="field">
-      <%= f.label :category_id %><br>
-      <%= f.text_field :category_id %>
+      <%= f.collection_select :category_id, Category.order(:name),:id,:name, include_blank: false %>
     </div>
 
 
