--- a/Wordsquash/app/views/posts/index.html.erb
+++ b/Wordsquash/app/views/posts/index.html.erb
@@ -2,12 +2,12 @@
 
 <h1>Listing Posts</h1>
 
-<table style="align-content: center">
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
       <th>Body</th>
-      <th>Category ID</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= post.title %></td>
         <td><%= post.body %></td>
-        <td><%= post.category_id %></td>
+        <td><%= post.category.name %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
